Fix contrast change

--- a/style.css
+++ b/style.css
@@ -838,7 +838,7 @@ h4 {
     color: white !important;
 }
 
-.col-sm-4>a {
+.col-sm-4 a {
     color: black !important;
 }
 
